--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "type": "module",
     "scripts": {
         "dev": "concurrently \"npm run dev --prefix server\" \"npm run dev --prefix client\"",
-        "build": "npm run build --prefix client",
-        "start": "npm run build && cross-env NODE_ENV=production node server/server.js"
+        "build": "npm install && npm install -- prefix client && npm run build --prefix client",
+        "start": "cross-env NODE_ENV=production node server/server.js"
     },
     "devDependencies": {
         "concurrently": "^8.2.2",
