--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon server.js",
     "start": "cross-env NODE_ENV=production node server/server.js",
-    "build": "npm install && npm install --prefix frontend && npm run build --prefix client"
+    "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
     "devDependencies": {
         "concurrently": "^8.2.2",
