--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "framer-motion": "^12.6.3",
+    "my-fullstack-app": "file:..",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "save-dev": "^0.0.1-security"
