--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
     "version": "1.0.0",
     "type": "module",
     "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server.js",
-    "start": "cross-env NODE_ENV=production node server/server.js",
-    "build": "npm install && npm install --prefix client && npm run build --prefix client"
-  },
+        "dev": "cross-env NODE_ENV=development nodemon server.js",
+        "start": "cross-env NODE_ENV=production node server/server.js",
+        "build": "npm install && npm install --prefix client && npm run build --prefix client"
+    },
     "devDependencies": {
         "concurrently": "^8.2.2",
         "cross-env": "^7.0.3",
@@ -53,6 +53,7 @@
         "supports-color": "^8.1.1",
         "tree-kill": "^1.2.2",
         "tslib": "^2.8.1",
+        "vite": "^6.3.3",
         "which": "^2.0.2",
         "wrap-ansi": "^7.0.0",
         "y18n": "^5.0.8",
