--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "my-fullstack-app": "file:..",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.3",
     "save-dev": "^0.0.1-security"
   },
   "devDependencies": {
